# Periscope

./: .clang-format  .gitignore  CMakeLists.txt  README.md  premake5.lua
include/: periscope.h  periscope_define.h  periscope_graph.h  periscope_graph_config.h  periscope_handle.h  periscope_key.h  periscope_link.h  periscope_node.h  periscope_object.h  periscope_printer.h  periscope_type.h  periscope_type_list.h  periscope_type_traits_misc.h  periscope_value_list.h
include/graph/: periscope_graph.h  periscope_graph_fwd.h  periscope_graph_properties.h
include/link/: periscope_link.h  periscope_link_properties.h
include/misc/: periscope_class_def.h  periscope_class_def_properties.h  periscope_note.h  periscope_note_properties.h
include/node/: periscope_node.h  periscope_node_properties.h
include/object/: periscope_handle.h  periscope_object.h  periscope_object_properties.h
include/tools/: periscope_guard.h  periscope_nested_map_op.h
include/type_hash/: periscope_type_hash.h
include/type_traits/: periscope_type_list.h
premake/: premake5.lua
sandbox/: CMakeLists.txt  premake5.lua
sandbox/src/: main.cpp
